--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "^13.15.0",
+    "react-native-webview": "13.13.5",
     "zod": "^3.25.64",
     "zustand": "^5.0.5"
   },
@@ -49,6 +50,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
