--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.10.0",
-    "expo": "~53.0.11",
+    "expo": "^54.0.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
