--- a/eas.json
+++ b/eas.json
@@ -9,10 +9,17 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "node": "22.16.0",
+      "android": {
+        "buildType": "app-bundle"
+      }
     }
   },
   "submit": {
