--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.6.0",
+    "react-native-worklets": "0.5.1",
     "zod": "^3.25.64",
     "zustand": "^5.0.6"
   },
@@ -55,6 +55,7 @@
     "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.17",
